Added sidebar and calendar view.

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,9 @@
-<mwl-calendar-week-view
-  precision="minutes"
-  [viewDate]="viewDate"
-  [events]="events"
->
-</mwl-calendar-week-view>
+<app-sidebar></app-sidebar>
+<div class="relative md:ml-64 bg-blueGray-100">
+  <mwl-calendar-week-view
+    precision="minutes"
+    [viewDate]="viewDate"
+    [events]="events"
+  >
+  </mwl-calendar-week-view>
+</div>
