--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,9 +1,35 @@
 <app-sidebar></app-sidebar>
 <div class="relative md:ml-64 bg-blueGray-100">
+
+  <ng-template
+    #weekViewHourSegmentTemplate
+    let-segment="segment"
+    let-locale="locale"
+    let-segmentHeight="segmentHeight"
+    let-isTimeLabel="isTimeLabel"
+  >
+    <div
+      #segmentElement
+      class="cal-hour-segment"
+      [style.height.px]="segmentHeight"
+      [class.cal-hour-start]="segment.isStart"
+      [class.cal-after-hour-start]="!segment.isStart"
+      [ngClass]="segment.cssClass"
+      (mousedown)="startDragToCreate(segment, $event, segmentElement)"
+    >
+      <div class="cal-time" *ngIf="isTimeLabel">
+        {{ segment.date | calendarDate:'weekViewHour':locale }}
+      </div>
+    </div>
+  </ng-template>
+
   <mwl-calendar-week-view
-    precision="minutes"
     [viewDate]="viewDate"
     [events]="events"
+    [hourSegmentTemplate]="weekViewHourSegmentTemplate"
+    [weekStartsOn]="weekStartsOn"
+    [refresh]="refresher"
+    (eventTimesChanged)="eventTimesChanged($event)"
   >
   </mwl-calendar-week-view>
 </div>
